--- a/src/components/peyes/Home.css
+++ b/src/components/peyes/Home.css
@@ -20,25 +20,50 @@
 .iconPixel{
     width: 100px;
 }
+#knowledge, #projects{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 20px 0px;
+}
 .sub{
     color: white;
     text-decoration: underline;
 }
+.languaje{
+    display: flex;
+    align-items: center;
+}
 .icon1{
     color: #C62F00 ;
     font-size: 50px;
+    margin-right: 10px;
+}
+.progress{
+    width: 230px;
+    height: 10px;
 }
 .icon2{
     color: #084FBA;
     font-size: 50px;
+    margin-right: 10px;
 }
 .icon3{
     background-color: #F6DE05;
     font-size: 40px;
+    margin-right: 10px;
 }
 .icon4{
     color: #AD0C80;
     font-size: 50px;
+    margin-right: 10px;
+}
+.containerLogo{
+    display: flex;
+    justify-content: center;
+    margin: 30px;
 }
 .logo{
     width: 150px;
