--- a/src/components/layouts/Footer.css
+++ b/src/components/layouts/Footer.css
@@ -9,15 +9,27 @@
 }
 .icon5{
     font-size: 30px;
-    margin-top: 10px;
+    margin-top: 20px;
     color: black;
 }
 .icon6{
     font-size: 50px;
     cursor: pointer;
-    border: 4px solid transparent;
+    margin-top: 20px;
+    border: 3px solid transparent;
     transition: all 300ms ease;
+    overflow: hidden;
 }
 .icon6:hover{
     transform: scale(1.05);
+}
+@media screen and (min-width:768px){
+    .icon5{
+        font-size: 60px;
+        margin-top: 10px;
+    }
+    .icon6{
+        font-size: 80px;
+        margin-top: 10px;
+    }
 }
