--- a/src/components/layouts/Header.css
+++ b/src/components/layouts/Header.css
@@ -31,4 +31,37 @@
 .contactP{
     color: #889EDA;
     border: black;
+    cursor: pointer;
+}
+
+@media screen and (min-width:768px)and (max-width:1023px){
+    .containerHeader{
+        height: 70vh;
+    }
+    .nav{
+        font-size: 20px;
+        gap: 30px;
+    }
+    .contact{
+        margin: -60% 0% 0% -90%;
+    }
+    .contactP{
+        font-size: 30px;
+    }
+}
+
+@media screen and (min-width:1024px){
+    .containerHeader{
+        height: 90vh;
+    }
+    .nav{
+        font-size: 30px;
+        gap: 35px;
+    }
+    .contact{
+        margin: -60% 0% 0% -90%;
+    }
+    .contactP{
+        font-size: 40px;
+    }
 }
