--- a/src/components/peyes/Home.css
+++ b/src/components/peyes/Home.css
@@ -6,16 +6,16 @@
     text-align: center;
     margin: 70px 0px 10px 0px;
 }
-.name{
-    color: white;
-    margin: 10px 5px;
-    font-size: 12px;
-}
 .name1{
     color: #889EDA;
     margin: 10px 0px;
     font-size: 15px;
     font-weight: bold;
+}
+.name{
+    color: white;
+    margin: 10px 5px;
+    font-size: 12px;
 }
 .iconPixel{
     width: 100px;
@@ -60,6 +60,9 @@
     font-size: 50px;
     margin-right: 10px;
 }
+.carrousel{
+    width: 300px;
+}
 .containerLogo{
     display: flex;
     justify-content: center;
@@ -67,4 +70,90 @@
 }
 .logo{
     width: 150px;
+}
+@media screen and (min-width:768px)and (max-width:1023px){
+    .containerInfo{
+        margin: 90px 0px 10px 0px;
+    }
+    .name1{
+        margin: 20px 0px;
+        font-size: 30px;
+    }
+    .name{
+        margin: 20px 15px;
+        font-size: 20px;
+    }
+    .iconPixel{
+        width: 200px;
+    }
+    .sub{
+        font-size: 30px;
+    }
+    #knowledge, #projects{
+        margin: 30px 0px;
+    }
+    .icon1,.icon2,.icon4{
+        font-size: 80px;
+        margin-right: 15px;
+    }
+    .icon3{
+        font-size: 70px;
+        margin-right: 25px;
+    }
+    .progress{
+        width: 450px;
+        height: 10px;
+    }
+    .carrousel{
+        width: 600px;
+    }
+    .containerLogo{
+        margin: 50px;
+    }
+    .logo{
+        width: 250px;
+    }
+}
+@media screen and (min-width:1024px){
+    .containerInfo{
+        margin: 120px 0px 20px 0px;
+    }
+    .name1{
+        margin: 30px 0px;
+        font-size: 40px;
+    }
+    .name{
+        margin: 30px 25px;
+        font-size: 30px;
+    }
+    .iconPixel{
+        width: 300px;
+    }
+    .sub{
+        font-size: 40px;
+    }
+    #knowledge, #projects{
+        margin: 40px 0px;
+    }
+    .icon1,.icon2,.icon4{
+        font-size: 110px;
+        margin-right: 20px;
+    }
+    .icon3{
+        font-size: 100px;
+        margin-right: 30px;
+    }
+    .progress{
+        width: 650px;
+        height: 10px;
+    }
+    .carrousel{
+        width: 650px;
+    }
+    .containerLogo{
+        margin: 70px;
+    }
+    .logo{
+        width: 350px;
+    }
 }
