--- a/src/components/peyes/Home.css
+++ b/src/components/peyes/Home.css
@@ -4,11 +4,11 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin: 70px 0px 10px 0px;
+    margin: 60px 0px 10px 0px;
 }
 .name1{
     color: #889EDA;
-    margin: 10px 0px;
+    margin: 15px 0px;
     font-size: 15px;
     font-weight: bold;
 }
@@ -17,9 +17,49 @@
     margin: 10px 5px;
     font-size: 12px;
 }
+.images{
+    position: relative;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+.images img{
+    backface-visibility: hidden;
+    width: 100px;
+    height: 100px;
+    transition: 1s;
+}
 .iconPixel{
     width: 100px;
+    position: absolute;
+    animation: one 10s linear infinite;
 }
+@keyframes one{
+    0%{
+        transform: perspective(150px) rotateY(0deg);
+    }
+    100%{
+        transform: perspective(150px) rotateY(180deg);
+    }
+}
+.logo1{
+    width: 100px;
+    position: absolute;
+    animation: two 10s linear infinite;
+    
+}
+@keyframes two{
+    0%{
+        transform: perspective(150px) rotateY(180deg);
+    }
+    100%{
+        transform: perspective(150px) rotateY(360deg);
+    }
+}
+
 #knowledge, #projects{
     display: flex;
     flex-direction: column;
@@ -83,7 +123,18 @@
         margin: 20px 15px;
         font-size: 20px;
     }
+    .images{
+        width: 300px;
+        height: 300px;
+    }
+    .images img{
+        width: 200px;
+        height: 200px;
+    }
     .iconPixel{
+        width: 200px;
+    }
+    .logo1{
         width: 200px;
     }
     .sub{
@@ -116,7 +167,7 @@
 }
 @media screen and (min-width:1024px){
     .containerInfo{
-        margin: 120px 0px 20px 0px;
+        margin: 110px 0px 20px 0px;
     }
     .name1{
         margin: 30px 0px;
@@ -126,8 +177,35 @@
         margin: 30px 25px;
         font-size: 30px;
     }
+    .images{
+        width: 400px;
+        height: 400px;
+    }
+    .images img{
+        width: 300px;
+        height: 300px;
+    }
     .iconPixel{
         width: 300px;
+    }
+    .logo1{
+        width: 300px;
+    }
+    @keyframes one{
+        0%{
+            transform: perspective(300px) rotateY(0deg);
+        }
+        100%{
+            transform: perspective(300px) rotateY(180deg);
+        }
+    }
+    @keyframes two{
+        0%{
+            transform: perspective(300px) rotateY(180deg);
+        }
+        100%{
+            transform: perspective(300px) rotateY(360deg);
+        }
     }
     .sub{
         font-size: 40px;
