--- a/src/components/layouts/Header.css
+++ b/src/components/layouts/Header.css
@@ -1,8 +1,9 @@
 .containerHeader{
-    height: 50vh;
+    height: 40vh;
     width: 100%;
     position: fixed;
-    z-index: 1;
+    z-index: 50;
+    background-color: transparent;
 }
 .nav{
     background-color: #889EDA;
@@ -26,7 +27,7 @@
     align-items: flex-start;
     align-content: flex-start;
     background-color: transparent;
-    margin: -50% 0% 0% -90%;
+    margin: -65% 0% 0% -90%;
 }
 .contactP{
     color: #889EDA;
@@ -36,14 +37,14 @@
 
 @media screen and (min-width:768px)and (max-width:1023px){
     .containerHeader{
-        height: 70vh;
+        height: 50vh;
     }
     .nav{
         font-size: 20px;
         gap: 30px;
     }
     .contact{
-        margin: -60% 0% 0% -90%;
+        margin: -70% 0% 0% -90%;
     }
     .contactP{
         font-size: 30px;
@@ -52,14 +53,15 @@
 
 @media screen and (min-width:1024px){
     .containerHeader{
-        height: 90vh;
+        height: 55vh;
+        overflow-y: hidden;
     }
     .nav{
         font-size: 30px;
         gap: 35px;
     }
     .contact{
-        margin: -60% 0% 0% -90%;
+        margin: -70% 0% 0% -90%;
     }
     .contactP{
         font-size: 40px;
