--- a/src/components/layouts/Header.css
+++ b/src/components/layouts/Header.css
@@ -18,6 +18,13 @@
    margin: 20px 0px;
    color: black;
 }
+a{
+    text-decoration: none;
+}
+
+.nav p:hover{
+    color: var(--secondary-color);
+}
 .contact{
     color: #889EDA!important;
     font-weight: bold;
@@ -34,6 +41,7 @@
     border: black;
     cursor: pointer;
 }
+.
 
 @media screen and (min-width:768px)and (max-width:1023px){
     .containerHeader{
