--- a/src/components/layouts/Header.css
+++ b/src/components/layouts/Header.css
@@ -1,5 +1,5 @@
 .containerHeader{
-    height: 40vh;
+    height: 60vw;
     width: 100%;
     position: fixed;
     z-index: 50;
@@ -41,11 +41,10 @@ a{
     border: black;
     cursor: pointer;
 }
-.
 
 @media screen and (min-width:768px)and (max-width:1023px){
     .containerHeader{
-        height: 50vh;
+        height: 45vw;
     }
     .nav{
         font-size: 20px;
@@ -61,7 +60,7 @@ a{
 
 @media screen and (min-width:1024px){
     .containerHeader{
-        height: 55vh;
+        height: 40vw;
         overflow-y: hidden;
     }
     .nav{
