--- a/src/components/peyes/Home.css
+++ b/src/components/peyes/Home.css
@@ -96,7 +96,17 @@
     margin-right: 10px;
 }
 .icon4{
-    color: #AD0C80;
+    color: #084FBA;
+    font-size: 50px;
+    margin-right: 10px;
+}
+.icon6{
+    color: #ffffff;
+    font-size: 50px;
+    margin-right: 10px;
+}
+.icon7{
+    color: #0f7721;
     font-size: 50px;
     margin-right: 10px;
 }
@@ -143,7 +153,7 @@
     #knowledge, #projects{
         margin: 30px 0px;
     }
-    .icon1,.icon2,.icon4{
+    .icon1,.icon2,.icon4,.icon6,.icon7{
         font-size: 80px;
         margin-right: 15px;
     }
@@ -213,7 +223,7 @@
     #knowledge, #projects{
         margin: 40px 0px;
     }
-    .icon1,.icon2,.icon4{
+    .icon1,.icon2,.icon4,.icon6,.icon7{
         font-size: 110px;
         margin-right: 20px;
     }
