--- a/src/components/peyes/Home.css
+++ b/src/components/peyes/Home.css
@@ -113,6 +113,10 @@
 .carrousel{
     width: 300px;
 }
+.carrousel-1{
+    background: linear-gradient(90deg,purple,blue, rgb(106, 106, 248));
+    opacity: 0.7;
+}
 .containerLogo{
     display: flex;
     justify-content: center;
