--- a/src/components/peyes/Home.css
+++ b/src/components/peyes/Home.css
@@ -116,7 +116,9 @@
 .carrousel-1{
     background: linear-gradient(90deg,purple,blue, rgb(106, 106, 248));
     opacity: 0.7;
-    overflow: hidden;
+}
+h3{
+    overflow-y:hidden;
 }
 .containerLogo{
     display: flex;
