--- a/src/components/peyes/Curriculum.css
+++ b/src/components/peyes/Curriculum.css
@@ -38,8 +38,8 @@
     color: white;
 }
 .donut{
-    width: 25%!important;
-    height: 25%!important;
+    width: 15vw!important;
+    height: 15vw!important;
     margin-right: 15px;
 }
 .skill{
