--- a/src/components/layouts/Header.css
+++ b/src/components/layouts/Header.css
@@ -1,5 +1,4 @@
 .containerHeader{
-    height: 60vw;
     width: 100%;
     position: fixed;
     z-index: 50;
@@ -34,7 +33,9 @@ a{
     align-items: flex-start;
     align-content: flex-start;
     background-color: transparent;
-    margin: -65% 0% 0% -90%;
+    margin: 35vw 0vw 0vw -10vw;
+    position: fixed;
+    z-index: 50;
 }
 .contactP{
     color: #889EDA;
@@ -43,15 +44,12 @@ a{
 }
 
 @media screen and (min-width:768px)and (max-width:1023px){
-    .containerHeader{
-        height: 45vw;
-    }
     .nav{
         font-size: 20px;
         gap: 30px;
     }
     .contact{
-        margin: -70% 0% 0% -90%;
+        margin: 25vw 0vw 0vw -10vw;
     }
     .contactP{
         font-size: 30px;
@@ -60,7 +58,6 @@ a{
 
 @media screen and (min-width:1024px){
     .containerHeader{
-        height: 40vw;
         overflow-y: hidden;
     }
     .nav{
@@ -68,7 +65,7 @@ a{
         gap: 35px;
     }
     .contact{
-        margin: -70% 0% 0% -90%;
+        margin: 25vw 0vw 0vw -8vw;
     }
     .contactP{
         font-size: 40px;
