--- a/src/components/peyes/Modal.css
+++ b/src/components/peyes/Modal.css
@@ -8,6 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 50!important;
 }
 .containerModal{
     width: 300px;
