--- a/src/components/peyes/Home.css
+++ b/src/components/peyes/Home.css
@@ -110,6 +110,11 @@
     font-size: 50px;
     margin-right: 10px;
 }
+.icon9{
+    color: red;
+    font-size: 50px;
+    margin-right: 10px;
+}
 .carrousel{
     width: 300px;
 }
@@ -160,7 +165,7 @@ h3{
     #knowledge, #projects{
         margin: 30px 0px;
     }
-    .icon1,.icon2,.icon4,.icon6,.icon7{
+    .icon1,.icon2,.icon4,.icon6,.icon7,.icon9{
         font-size: 80px;
         margin-right: 15px;
     }
@@ -230,7 +235,7 @@ h3{
     #knowledge, #projects{
         margin: 40px 0px;
     }
-    .icon1,.icon2,.icon4,.icon6,.icon7{
+    .icon1,.icon2,.icon4,.icon6,.icon7,.icon9{
         font-size: 110px;
         margin-right: 20px;
     }
